# riven-rs

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RIVEN_API_DOCUMENTATION.md  clippy.toml  docker-compose.yaml  rustfmt.toml
crates/plugin-aiostreams/: Cargo.toml
crates/plugin-aiostreams/src/: client.rs  lib.rs  models.rs
crates/plugin-aiostreams/src/client/: tests.rs
crates/plugin-aiostreams/src/models/: tests.rs
crates/plugin-calendar/: Cargo.toml
crates/plugin-calendar/src/: lib.rs
crates/plugin-calendar/src/tests/: mod.rs
crates/plugin-comet/: Cargo.toml
crates/plugin-comet/src/: lib.rs
crates/plugin-comet/src/tests/: mod.rs
crates/plugin-dashboard/: Cargo.toml
crates/plugin-dashboard/src/: lib.rs
crates/plugin-dashboard/src/tests/: mod.rs
crates/plugin-emby-jellyfin/: Cargo.toml
crates/plugin-emby-jellyfin/src/: emby.rs  jellyfin.rs  lib.rs
crates/plugin-emby-jellyfin/src/tests/: mod.rs
crates/plugin-listrr/: Cargo.toml
crates/plugin-listrr/src/: lib.rs
crates/plugin-listrr/src/tests/: mod.rs
crates/plugin-logs/: Cargo.toml
crates/plugin-logs/src/: lib.rs  runtime.rs
crates/plugin-logs/src/tests/: mod.rs
crates/plugin-mdblist/: Cargo.toml
crates/plugin-mdblist/src/: lib.rs
crates/plugin-mdblist/src/tests/: mod.rs
crates/plugin-newznab/: Cargo.toml
crates/plugin-newznab/src/: lib.rs
crates/plugin-plex/: Cargo.toml
crates/plugin-plex/src/: client.rs  lib.rs  paths.rs
crates/plugin-plex/src/tests/: mod.rs
crates/plugin-sabnzbd/: Cargo.toml
crates/plugin-sabnzbd/src/: lib.rs
crates/plugin-seerr/: Cargo.toml
crates/plugin-seerr/src/: lib.rs  webhook.rs
crates/plugin-seerr/src/tests/: mod.rs
crates/plugin-stremthru/: Cargo.toml
crates/plugin-stremthru/src/: client.rs  lib.rs  models.rs  newznab.rs
crates/plugin-stremthru/src/client/: account.rs  downloads.rs  links.rs  tests.rs  torznab.rs
crates/plugin-stremthru/src/models/: tests.rs
crates/plugin-stremthru/src/tests/: mod.rs
crates/plugin-subdl/: Cargo.toml
crates/plugin-subdl/src/: lib.rs
crates/plugin-trakt/: Cargo.toml
crates/plugin-trakt/src/: lib.rs
crates/plugin-trakt/src/tests/: mod.rs
crates/plugin-tvdb/: Cargo.toml
crates/plugin-tvdb/src/: lib.rs
crates/plugin-tvdb/src/tests/: mod.rs
crates/plugin-usenet/: Cargo.toml
crates/plugin-usenet/src/: availnzb.rs  discovery.rs  health_check.rs  lib.rs  nntp.rs  preflight.rs  storage.rs  streaming.rs  types.rs
crates/plugin-webhooks/: Cargo.toml
crates/plugin-webhooks/src/: lib.rs  tests.rs
crates/riven-api/: Cargo.toml  schema.graphql
crates/riven-api/src/: lib.rs  profiles.rs  server.rs  vfs_mount.rs
crates/riven-api/src/schema/: auth.rs  discovery.rs  event_controller.rs  helpers.rs  metadata.rs  mod.rs  mutations.rs  pub_sub.rs  queries.rs  subscriptions.rs  typed_items.rs  types.rs  vfs.rs
crates/riven-api/tests/: dump_sdl.rs
crates/riven-app/: Cargo.toml  build.rs
crates/riven-app/src/: logging.rs  main.rs  plugins.rs  runtime.rs  setup.rs  usenet.rs
crates/riven-core/: Cargo.toml
crates/riven-core/src/: config.rs  dns.rs  downloader.rs  events.rs  http.rs  lib.rs  local_source.rs  logging.rs  nzb.rs  plugin.rs  reindex.rs  secret.rs  settings.rs  stream_link.rs  stremio.rs  types.rs  vfs_layout.rs
crates/riven-db/: Cargo.toml
crates/riven-db/migrations/: 001_initial.sql  002_add_stream_rank.sql  003_add_settings_table.sql  004_retry_and_upsert.sql  005_stream_file_size.sql  006_scheduler_index.sql  007_ranking_profiles.sql  008_multi_version.sql  009_profile_versions.sql  010_profile_enabled.sql  011_perf_indexes.sql  012_item_request_state_alignment.sql  013_flow_artifacts.sql  014_media_item_is_anime.sql  015_stream_magnet.sql  016_drop_flow_artifacts.sql  017_stream_timestamps.sql  018_enable_hd_profile_by_default.sql  019_media_item_network_timezone.sql  020_episode_aired_at_utc.sql  021_scrape_attempt_timestamp.sql  022_backfill_parent_aired_at.sql  023_state_triggers.sql  024_state_recompute_batching.sql  025_drop_state_triggers.sql  026_subtitle_source_columns.sql  027_item_request_partial_request.sql  028_usenet_meta.sql  029_usenet_entry_identity.sql  030_usenet_file_health.sql  031_usenet_traffic.sql  032_usenet_repair.sql  033_permanent_blacklist.sql  034_updated_at_orphan_gc_identity.sql  035_structured_library_profile_filters.sql
crates/riven-db/src/: entities.rs  lib.rs  migration.rs  migrations.rs  repo.rs
crates/riven-db/tests/: entities.rs  media.rs  state.rs
crates/riven-plugins/: Cargo.toml
crates/riven-plugins/src/: lib.rs
crates/riven-queue/: Cargo.toml
crates/riven-queue/src/: cancellation.rs  context.rs  dedup.rs  discovery.rs  dispatch.rs  flow.rs  indexing.rs  jobs.rs  lib.rs  lifecycle.rs  main_orchestrator.rs  maintenance.rs  orchestrator.rs  scheduling.rs  storage.rs  worker.rs  workers.rs
crates/riven-rank/: Cargo.toml
crates/riven-rank/benches/: parse_bench.rs
crates/riven-rank/examples/: test_parse.rs
crates/riven-rank/src/: country.rs  defaults.rs  lib.rs  settings.rs  sort.rs
crates/riven-rank/tests/: test_adult.rs  test_anime.rs  test_audio.rs  test_codec.rs  test_collection.rs  test_container.rs  test_convert.rs  test_date.rs  test_dubbed.rs  test_edition.rs  test_episodes.rs  test_extras.rs  test_group.rs  test_hardcoded.rs  test_hdr.rs  test_language.rs  test_main.rs  test_network.rs  test_parse.rs  test_parser.rs  test_proper.rs  test_quality.rs  test_rank_api.rs  test_region.rs  test_repack.rs  test_resolution.rs  test_retail.rs  test_season.rs  test_site.rs  test_size.rs  test_sports.rs  test_title.rs  test_trash.rs  test_unrated.rs  test_volume.rs  test_year.rs
crates/riven-usenet/: Cargo.toml
crates/riven-usenet/src/: bufpool.rs  cache.rs  crypto.rs  lib.rs  nntp.rs  nzb.rs  par2.rs  state.rs  streamer.rs  yenc.rs
crates/riven-vfs/: Cargo.toml
crates/riven-vfs/src/: cache.rs  chunks.rs  detect.rs  fetcher.rs  filesystem.rs  lib.rs  link.rs  media_stream.rs  path_info.rs  prefetch.rs  query.rs  readdir.rs  state.rs  stream.rs
(+238 files in other folders)
