[package]
name = "plugin-aiostreams"
version = "0.1.0"
edition.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
reqwest = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
