[package]
name = "plugin-calendar"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
async-trait = { workspace = true }
async-graphql = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
