[package]
name = "plugin-comet"
version = "0.1.0"
edition.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-graphql = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

[lints]
workspace = true
