[package]
name = "plugin-dashboard"
version = "0.1.0"
edition.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
async-trait = { workspace = true }
async-graphql = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
