[package]
name = "plugin-emby-jellyfin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
reqwest = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
