[package]
name = "plugin-logs"
version = "0.1.0"
edition = "2021"

[dependencies]
riven-core = { path = "../riven-core" }
async-trait = { workspace = true }
async-graphql = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
