[package]
name = "plugin-mdblist"
version = "0.1.0"
edition = "2024"

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-graphql = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
url = "2"

[lints]
workspace = true
