[package]
name = "plugin-newznab"
version = "0.1.0"
edition = "2024"

[dependencies]
riven-core = { path = "../riven-core" }
reqwest = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
redis = { workspace = true }
sha1 = "0.10"
hex = { workspace = true }
quick-xml = "0.39"
