[package]
name = "plugin-plex"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
