[package]
name = "plugin-sabnzbd"
version = "0.1.0"
edition = "2024"

[dependencies]
riven-core = { path = "../riven-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
