[package]
name = "plugin-seerr"
version = "0.1.0"
edition.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
sqlx = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
async-graphql = { workspace = true }
anyhow = { workspace = true }
inventory = { workspace = true }

[lints]
workspace = true
