[package]
name = "plugin-stremthru"
version = "0.1.0"
edition.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
reqwest = { workspace = true }
tokio = { workspace = true }
sha1 = "0.10"
hex = { workspace = true }
quick-xml = "0.39"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-graphql = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }

[lints]
workspace = true
