[package]
name = "plugin-subdl"
version = "0.1.0"
edition = "2024"

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
sqlx = { workspace = true }
serde_urlencoded = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
