[package]
name = "plugin-tvdb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
