[package]
name = "plugin-usenet"
version = "0.1.0"
edition.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
riven-usenet = { path = "../riven-usenet" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
redis = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
