[package]
name = "plugin-usenet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
riven-usenet = { path = "../riven-usenet" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
lru = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
