[package]
name = "riven-api"
version = "0.1.0"
edition = "2024"

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
riven-rank = { path = "../riven-rank" }
riven-queue = { path = "../riven-queue" }
apalis-board-api = { workspace = true }
plugin-dashboard = { path = "../plugin-dashboard" }
plugin-logs = { path = "../plugin-logs" }
plugin-calendar = { path = "../plugin-calendar" }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
percent-encoding = "2"
tokio-rustls = "0.26"
url = "2"
webpki-roots = "1"
