[package]
name = "riven-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "riven"
path = "src/main.rs"

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
riven-api = { path = "../riven-api" }
riven-queue = { path = "../riven-queue" }
plugin-tmdb = { path = "../plugin-tmdb" }
plugin-tvdb = { path = "../plugin-tvdb" }
plugin-comet = { path = "../plugin-comet" }
plugin-torrentio = { path = "../plugin-torrentio" }
plugin-aiostreams = { path = "../plugin-aiostreams" }
plugin-stremthru = { path = "../plugin-stremthru" }
plugin-plex = { path = "../plugin-plex" }
plugin-seerr = { path = "../plugin-seerr" }
plugin-listrr = { path = "../plugin-listrr" }
plugin-mdblist = { path = "../plugin-mdblist" }
plugin-subdl = { path = "../plugin-subdl" }
plugin-notifications = { path = "../plugin-notifications" }
plugin-webhooks = { path = "../plugin-webhooks" }
plugin-emby-jellyfin = { path = "../plugin-emby-jellyfin" }
plugin-calendar = { path = "../plugin-calendar" }
plugin-trakt = { path = "../plugin-trakt" }
plugin-dashboard = { path = "../plugin-dashboard" }
plugin-newznab = { path = "../plugin-newznab" }
plugin-usenet = { path = "../plugin-usenet" }
riven-usenet = { path = "../riven-usenet" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
