[package]
name = "riven-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "riven"
path = "src/main.rs"

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
riven-api = { path = "../riven-api" }
riven-queue = { path = "../riven-queue" }
riven-plugins = { path = "../riven-plugins" }
riven-usenet = { path = "../riven-usenet" }
# The binary reads NNTP settings out of the usenet plugin at startup to hand to
# the streamer; the rest of the plugins are reached only through riven-plugins.
plugin-usenet = { path = "../plugin-usenet" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
