[package]
name = "riven-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
hyper = { workspace = true }
# Async DNS resolver shared by the HTTP client and the NNTP dialer — replaces
# musl's fragile getaddrinfo (EAI_AGAIN under concurrency in Docker/OrbStack).
# Pinned to 0.25 to share the single version reqwest's `hickory-dns` feature
# already pulls (reqwest requires ^0.25).
hickory-resolver = "0.26"
async-trait = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
sentry = { workspace = true }
log = "0.4"
figment = { workspace = true }
parking_lot = { workspace = true }
sha1 = "0.11"
hex = { workspace = true }
quick-xml = "0.40"
dashmap = { workspace = true }
bytes = { workspace = true }
redis = { workspace = true }
sea-orm = { workspace = true }

[dev-dependencies]
axum = { workspace = true }

[lints]
workspace = true
