[package]
name = "riven-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
riven-core = { path = "../riven-core" }
riven-db = { path = "../riven-db" }
riven-rank = { path = "../riven-rank" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true }
futures = { workspace = true }
ulid = { workspace = true }
