[package]
name = "riven-rank"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
strsim = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse_bench"
harness = false

[lints]
workspace = true
