[package]
name = "riven-rank"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
strsim = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "parse_bench"
harness = false

[lints]
workspace = true
