[package]
name = "riven-usenet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
riven-core = { path = "../riven-core" }
tokio = { workspace = true, features = ["io-util", "net", "sync", "time", "rt", "macros"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
webpki-roots = "1"
quick-xml = "0.40"
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
crc32fast = "1"
memchr = "2"
lru = { workspace = true }
futures = { workspace = true }
pbkdf2 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
